feat(admin): implement management dashboards and detail pages